RESOLVED FIXED 275495
Fix for Mac Builds with INTERACTION_REGIONS_IN_EVENT_REGION turned on.
https://bugs.webkit.org/show_bug.cgi?id=275495
Summary Fix for Mac Builds with INTERACTION_REGIONS_IN_EVENT_REGION turned on.
Megan Gardner
Reported 2024-06-14 10:29:55 PDT
Fix for Mac Builds with INTERACTION_REGIONS_IN_EVENT_REGION turned on.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-14 10:30:08 PDT
Megan Gardner
Comment 2 2024-06-14 10:37:42 PDT
EWS
Comment 3 2024-06-14 10:49:43 PDT
Committed 280025@main (2ba7aa7e093f): <https://commits.webkit.org/280025@main> Reviewed commits have been landed. Closing PR #29829 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.