Fix for Mac Builds with INTERACTION_REGIONS_IN_EVENT_REGION turned on. https://bugs.webkit.org/show_bug.cgi?id=275495 rdar://129859381

Reviewed by Tim Horton.

This code was behind #if ENABLE(SCROLLING_THREAD) which is only
true on mac, so this path was not complied in normal workflows.

* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateScrollLayerClipping):

Canonical link: https://commits.webkit.org/280025@main